Fixed extra white space in edit view

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -118,5 +118,5 @@ sf-form-element > div > button:last-of-type {
 }   
 
 sf-form-element > div {
-    padding-bottom: 35px;
+    padding-bottom: 15px;
 }
